--- a/gradle.properties
+++ b/gradle.properties
@@ -6,10 +6,13 @@
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx1536m
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+#开启守护进程
+org.gradle.daemon=true
+org.gradle.jvmargs=-Xms2256m -Xmx8704m
+android.injected.testOnly=false
+#拆分为两个包
+#初步处理：true 的时候 为测试版测试库 false 为正式版正式库
+isTest=true
 
 
